--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "knex": "^0.20.4",
+    "nodemon": "^2.0.2",
     "scripts": "^0.1.0",
     "sqlite3": "^4.1.1"
   },
@@ -14,8 +15,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "nodemon index.js",
-    
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
